py/repl: Use mp_load_method_protected to prevent leaking of exceptions.

This patch fixes the possibility of a crash of the REPL when tab-completing
an object which raises an exception when its attributes are accessed.

See issue #3729.